2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Interpolation.h: 

2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>

	* Geodetic.h:
	* UniversalTransverseMercator.h: 

2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Geodetic.h: 

2014-03-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Matrix4.h:
	* Matrix3.h:
	* Matrix2.h: 

2014-03-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Geodetic.h: 

2014-03-05  Holger Seelig  <holger.seelig@yahoo.de>

	* UniversalTransverseMercator.h: 

2014-03-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Camera.h: 

2014-03-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ReferenceEllipsoids.h: 

2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Interpolation.h: 

2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-standard.cproj:
	* Geodetic.h:
	* Interpolation.h:
	* UniversalTransverseMercator.h: 

2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Geodetic.h:
	* UniversalTransverseMercator.h: 

2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Geodetic.h:
	* UniversalTransverseMercator.h: 

2014-02-28  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-standard.cproj:
	* Camera.h: 

2014-02-27  Holger Seelig  <holger.seelig@yahoo.de>

	* Box2.h:
	* Box3.h:
	* Line3.h:
	* Geodetic.h:
	* Matrix2.h:
	* Matrix3.h:
	* Matrix4.h:
	* Plane3.h:
	* Rotation4.h:
	* Quaternion.h:
	* Cylinder3.h:
	* MatrixStack.h:
	* BasicConverter.h:
	* UniversalTransverseMercator.h: 

2014-02-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* Functional.h:
	* libtitania-standard.cproj:
	* Matrix3.h:
	* Matrix4.h:
	* Matrix2.h:
	* Spheroid3.h:
	* MatrixStack.h:
	* MatrixStack.cpp: 

2014-02-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Rotation4.h:
	* SquadInterpolator.h:
	* CatmullRomSplineInterpolator.h: 

2014-02-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Box3.h:
	* Box2.h:
	* Color3.h:
	* Color4.h:
	* Line3.h:
	* Matrix4.h:
	* Matrix2.h:
	* Matrix3.h:
	* Sphere3.h:
	* Cylinder3.h: