@@ -4,6 +4,10 @@
 
 2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Interpolation.h: 
+
+2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Geodetic.h:
 	* UniversalTransverseMercator.h: 
 
